--- a/.github/workflows/calculang.yml
+++ b/.github/workflows/calculang.yml
@@ -1,12 +1,18 @@
 # from https://github.com/declann/calculang-example-repl-repo/blob/master/.github/workflows/repl.yml
 # f5cbcc9 Nov 10 2021
 
-name: CI
+name: calculang build & run
 on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+  workflow_dispatch: {}
+  workflow_run:
+      workflows: ["Flat"]
+      types:
+        - completed
+
+  #push:
+  #  branches: [main]
+  #pull_request:
+  #  branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,8 +34,10 @@ jobs:
             ${{ runner.os }}-
       - name: Install modules (calculang-js)
         run: npm install
-      - name: Build
-        run: npm run build
+      - name: Build IRL-stats calculang model
+        run: npm run build:IRL-stats
+      - name: Run use-IRL-stats script
+        run: npm run run:IRL-stats
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
