--- a/.github/workflows/calculang.yml
+++ b/.github/workflows/calculang.yml
@@ -43,4 +43,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           message: 'chore: repl autopublish ${date}'
-          branch: 'master'
+          branch: 'main'
