--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "run:IRL-stats": "node ./models/use-IRL-stats.js > ./models/use-IRL-stats.csv"
   },
   "dependencies": {
+    "d3-dsv": "^3.0.1",
     "date-fns": "^2.25.0",
     "lru-memoize": "^1.1.0",
     "raw-loader": "^4.0.2",
-    "underscore": "^1.13.1",
-    "d3-dsv": "^3.0.1"
+    "underscore": "^1.13.1"
   },
   "devDependencies": {
+    "@calculang/calculang-js": "^0.1.0-alpha.5",
     "date-fns": "^2.25.0",
-    "neat-csv": "^7.0.0",
-    "@calculang/calculang-js": "file:../../../../programming/PROJECTS/github/DECLANN/calculang/packages/calculang-js"
+    "neat-csv": "^7.0.0"
   }
 }
