introduce variable lag model-of-model

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build:IRL-PT-factor": "cul-js compile ./models/IRL-PT-factor.cul.js",
     "run:IRL-PT-factor": "node ./models/use-IRL-PT-factor.js > ./models/use-IRL-PT-factor.json",
-    "build:IRL-stats": "cul-js compile ./models/IRL-stats.cul.js",
+    "build:IRL-stats": "cul-js compile ./models/IRL-stats.cul.js && cul-js compile ./models/IRL-stats-v-lag.cul.js",
     "run:IRL-stats": "node ./models/use-IRL-stats.js > ./models/use-IRL-stats.csv"
   },
   "dependencies": {
